tdf#107684 DOCX export: fix duplicated <w:outlineLvl> element for styles

Next to the existing OutlineNumbering() (which is only used for styles),
commit fd2d14d5543c82eb875e720c98b51518699a8fbc (Implement DOCX export
of paragraph outline level, 2013-10-04) added ParaOutlineLevel() to the
attribute output class that also wrote the outline level of a paragraph
(style), but worked for the cases when the style was imported by
writerfilter as well.

As a side-effect styles imported by xmloff now have their outline level
property handled twice, leading to duplicated elements.

Fix the problem by only writing <w:outlineLvl> in ParaOutlineLevel():
it covers both use-cases, so no need to do anything in
OutlineNumbering().

Reviewed-on: https://gerrit.libreoffice.org/38132
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit fe13c249c8964355e39869a357c393f3208b6def)
Reviewed-on: https://gerrit.libreoffice.org/38637
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 35e62d9e649badfe00d0b8ea4c307d3fbbda735c)

Change-Id: Ic982dd70a00609cdfc3744a8ab69aaa828410fd0